[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://scripts/AttackPlayer.gd" type="Script" id=3]
[ext_resource path="res://scripts/PlayerControlledPath.gd" type="Script" id=4]
[ext_resource path="res://sprites/tile_selector.png" type="Texture" id=5]
[ext_resource path="res://scripts/TileSelectorSprite.gd" type="Script" id=6]
[ext_resource path="res://scripts/AgentActionSystem/ActionQueue.gd" type="Script" id=7]
[ext_resource path="res://scripts/CharDeathAnimation.gd" type="Script" id=8]
[ext_resource path="res://sprites/gfx/smoke/smoke1.png" type="Texture" id=9]
[ext_resource path="res://sprites/gfx/smoke/smoke2.png" type="Texture" id=10]
[ext_resource path="res://sprites/gfx/smoke/smoke3.png" type="Texture" id=11]
[ext_resource path="res://sprites/gfx/smoke/smoke4.png" type="Texture" id=12]
[ext_resource path="res://sprites/gfx/smoke/smoke5.png" type="Texture" id=13]
[ext_resource path="res://sprites/gfx/smoke/smoke6.png" type="Texture" id=14]
[ext_resource path="res://sprites/gfx/smoke/smoke7.png" type="Texture" id=15]
[ext_resource path="res://sprites/gfx/smoke/smoke8.png" type="Texture" id=16]
[ext_resource path="res://sprites/grave_markers.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.4706, 31.8495 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "DeathAnim",
"speed": 5.0
} ]

[node name="Char" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Attack" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -30.0
margin_top = 32.0
margin_right = 40.0
margin_bottom = 46.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "HP: X X X X"
align = 1
valign = 1

[node name="PlayerControlledPath" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="TileSelectorSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="ActionQueue" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="ActionQueue"]
one_shot = true

[node name="CharDeathAnimation" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="CharDeathAnimation"]
visible = false
scale = Vector2( 3.98849, 3.98849 )
frames = SubResource( 2 )
animation = "DeathAnim"
speed_scale = 0.9

[node name="Sprite" type="Sprite" parent="CharDeathAnimation"]
visible = false
position = Vector2( 0.107708, 2.62862 )
scale = Vector2( 1.36678, 1.36678 )
z_index = 1
texture = ExtResource( 17 )

[connection signal="agent_enters_attack_mode" from="." to="Attack" method="_on_Char_agent_enters_attack_mode"]
[connection signal="agent_enters_walk_mode" from="." to="PlayerControlledPath" method="_on_Char_agent_enters_walk_mode"]
[connection signal="agent_exits_attack_mode" from="." to="Attack" method="_on_Char_agent_exits_attack_mode"]
[connection signal="agent_exits_walk_mode" from="." to="PlayerControlledPath" method="_on_Char_agent_exits_walk_mode"]
[connection signal="single_action_finished" from="." to="ActionQueue" method="_on_Char_single_action_finished"]
[connection signal="begin_executing_actions" from="ActionQueue" to="." method="_on_ActionQueue_begin_executing_actions"]
[connection signal="finished_executing_actions" from="ActionQueue" to="." method="_on_ActionQueue_finished_executing_actions"]
[connection signal="timeout" from="ActionQueue/Timer" to="ActionQueue" method="_on_Timer_timeout"]
[connection signal="frame_changed" from="CharDeathAnimation/AnimatedSprite" to="CharDeathAnimation" method="_on_AnimatedSprite_frame_changed"]
